Baking normal errors when auto smooth enabled #61912

Closed
opened 2019-02-24 17:40:09 +01:00 by Kamil Makowski · 12 comments

System Information
Operating system: Windows 10
Graphics card: GTX 970

Blender Version
Broken: 2.80.45, 6bab905c9d, blender2.8, 2019-02-24,

Exact steps for others to reproduce the error

When I try bake normal for my simple object i have this weird edge issue. UV islands are separated and low poly has sharp edges marked. Also i notice that baked normal map is too intense. I think that in this case baking with auto smooth and flat shading should produce the same result, but somehow don't. Also when I change strength of the broken normal map in the material normal map node to 0.5 everything looks ok.

good.png

bad.png

Box_Bake.blend

**System Information** Operating system: Windows 10 Graphics card: GTX 970 **Blender Version** Broken: 2.80.45, 6bab905c9d40, blender2.8, 2019-02-24, **Exact steps for others to reproduce the error** When I try bake normal for my simple object i have this weird edge issue. UV islands are separated and low poly has sharp edges marked. Also i notice that baked normal map is too intense. I think that in this case baking with auto smooth and flat shading should produce the same result, but somehow don't. Also when I change strength of the broken normal map in the material normal map node to 0.5 everything looks ok. ![good.png](https://archive.blender.org/developer/F6704845/good.png) ![bad.png](https://archive.blender.org/developer/F6704850/bad.png) [Box_Bake.blend](https://archive.blender.org/developer/F6704860/Box_Bake.blend)
Author

Added subscriber: @kamilozo

Added subscriber: @kamilozo

#64187 was marked as duplicate of this issue

#64187 was marked as duplicate of this issue
Dalai Felinto was assigned by Sebastian Parborg 2019-02-25 16:33:04 +01:00

Added subscriber: @JonathanLampel-4

Added subscriber: @JonathanLampel-4

@kamilozo do we have this problem in 2.79 as well or only 2.80?
If it is only 2.80 can you share a 2.79 simple file that reproduces the issue there?

@kamilozo do we have this problem in 2.79 as well or only 2.80? If it is only 2.80 can you share a 2.79 simple file that reproduces the issue there?
Author

@dfelinto this problem only appear in 2.80. Here is the same situation in 2.79 and everything works fine. Bake_2.79.blend

@dfelinto this problem only appear in 2.80. Here is the same situation in 2.79 and everything works fine. [Bake_2.79.blend](https://archive.blender.org/developer/F6754626/Bake_2.79.blend)
Author

@dfelinto any progress with this error?

@dfelinto any progress with this error?

Added subscriber: @Nominous

Added subscriber: @Nominous

Added subscriber: @aivanis

Added subscriber: @aivanis

This issue was referenced by c8e3fe608e

This issue was referenced by c8e3fe608e7ab02ef0ae2a4f57dab85e3c1d5eba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @PanicPug

Added subscriber: @PanicPug

This comment was removed by @PanicPug

*This comment was removed by @PanicPug*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61912
No description provided.