Fix T61912, T63297: error baking tangent space normal map with autosmooth